--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,6 @@
     <link rel="stylesheet" href="/css/style.css"/>
 </head>
 <body>
-<body>
 <h1>How to use single plane balancing application</h1>
 <ul>Fill in the fields in the table:
     <li>Mode is type of generator/motor load.</li>
@@ -18,12 +17,13 @@
     <li>The reference number is a measurement number as a
         reference to the previous state of the machine.
     </li>
-    <li>The state is an on/off switch. It is used to take into
+    <li>The state is an true/false switch. It is used to take into
         account in the averaging of values when calculating the total load.
     </li>
 </ul>
 
 <div class="divTable blueTable">
+
     <div class="divTableHeading">
         <div class="divTableRow">
             <div class="divTableHead">id</div>
@@ -34,11 +34,14 @@
             <div class="divTableHead">Weight <br> phase</div>
             <div class="divTableHead">Reference</div>
             <div class="divTableHead">State</div>
+            <div class="divTableHead">Total weight <br> magnitude</div>
+            <div class="divTableHead">Total weight <br> phase</div>
             <div class="divTableHead">Edit</div>
             <div class="divTableHead">Delete</div>
         </div>
     </div>
-    <div class="divTableBody" th:each="record:${record}">
+
+    <div class="divTableBody" th:each="record:${records}">
         <div class="divTableRow">
             <div class="divTableCell" th:text=${record.id}></div>
             <div class="divTableCell" th:text=${record.mode}></div>
@@ -48,6 +51,8 @@
             <div class="divTableCell" th:text=${record.phaseweight}></div>
             <div class="divTableCell" th:text=${record.reference}></div>
             <div class="divTableCell" th:text=${record.stage}></div>
+            <div class="divTableCell" th:text=${record.magTotalWeight}></div>
+            <div class="divTableCell" th:text=${record.phaseTotalWeight}></div>
             <div class="divTableCell">
                 <form th:action="@{'/record/edit/' + ${record.id}}" th:method="post">
                     <input type="submit" value="edit"/>
@@ -61,16 +66,18 @@
         </div>
     </div>
 
-    <form class="divTableRow" style="background: #F13B3B" action="/record/create" method="post">
-        <div class="divTableCell"><input type="submit" value="Add record"/></div>
+    <form class="divTableRow" style="background: #78DBE2" action="/record/create" method="post">
+        <div class="divTableCell"></div>
         <div class="divTableCell"><input type="text" name="mode"/></div>
         <div class="divTableCell"><input type="number" name="magvibration"/></div>
         <div class="divTableCell"><input type="number" name="phasevibration"/></div>
         <div class="divTableCell"><input type="number" name="magweight"/></div>
         <div class="divTableCell"><input type="number" name="phaseweight"/></div>
         <div class="divTableCell"><input type="number" name="reference"/></div>
-        <div class="divTableCell"><input type="number" name="stage"/></div>
+        <div class="divTableCell"><input type="checkbox" name="stage"/></div>
+        <div class="divTableCell"><input type="submit" value="Add record"/></div>
     </form>
+
 </div>
 </body>
 </html>
