--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -54,7 +54,7 @@
             <div class="divTableCell" th:text=${record.magTotalWeight}></div>
             <div class="divTableCell" th:text=${record.phaseTotalWeight}></div>
             <div class="divTableCell">
-                <form th:action="@{'/record/edit/' + ${record.id}}" th:method="post">
+                <form th:action="@{'/record/edit/' + ${record.id}}" th:method="get">
                     <input type="submit" value="edit"/>
                 </form>
             </div>
@@ -67,7 +67,7 @@
     </div>
 
     <form class="divTableRow" style="background: #78DBE2" action="/record/create" method="post">
-        <div class="divTableCell"></div>
+        <div class="divTableCell">&#10060;</div>
         <div class="divTableCell"><input type="text" name="mode"/></div>
         <div class="divTableCell"><input type="number" name="magvibration"/></div>
         <div class="divTableCell"><input type="number" name="phasevibration"/></div>
