Add unit-records. Fix some bugs

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -101,4 +101,10 @@ input[type=text], input[type=number] {
   box-sizing: border-box;
   background-color: transparent;
   cursor: pointer;
+  text-align: center;
+}
+
+.decimal{
+  inputmode: decimal;
+  pattern: "[0-9]*[.,]?[0-9]*"
 }
