--- a/src/main/resources/templates/unit/update-unit.html
+++ b/src/main/resources/templates/unit/update-unit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Single plane balancing</title>
+    <title>Edit unit</title>
     <link rel="stylesheet" href="/css/style.css"/>
 </head>
 <body>
@@ -10,32 +10,27 @@
     <div class="divTableHeading">
         <div class="divTableRow">
             <div class="divTableHead">id</div>
-            <div class="divTableHead">Mode</div>
-            <div class="divTableHead">Vibration <br> magnitude</div>
-            <div class="divTableHead">Vibration <br> phase</div>
-            <div class="divTableHead">Weight <br> magnitude</div>
-            <div class="divTableHead">Weight <br> phase</div>
-            <div class="divTableHead">Reference</div>
-            <div class="divTableHead">State</div>
-            <div class="divTableHead">Edit</div>
+            <div class="divTableHead">Station</div>
+            <div class="divTableHead">Unit<br>number</div>
+            <div class="divTableHead">Type</div>
+            <div class="divTableHead">Plate</div>
+            <div class="divTableHead">Description</div>
         </div>
     </div>
 
     <div class="divTableBody">
         <div class="divTableRow">
-            <div class="divTableCell" th:text=${record.id}></div>
-            <div class="divTableCell" th:text=${record.mode}></div>
-            <div class="divTableCell" th:text=${record.magvibration}></div>
-            <div class="divTableCell" th:text=${record.phasevibration}></div>
-            <div class="divTableCell" th:text=${record.magweight}></div>
-            <div class="divTableCell" th:text=${record.phaseweight}></div>
-            <div class="divTableCell" th:text=${record.reference}></div>
-            <div class="divTableCell" th:text=${record.stage}></div>
+            <div class="divTableCell" th:text=${unit.id}></div>
+            <div class="divTableCell" th:text=${unit.station}></div>
+            <div class="divTableCell" th:text=${unit.unitnumber}></div>
+            <div class="divTableCell" th:text=${unit.type}></div>
+            <div class="divTableCell" th:text=${unit.plate}></div>
+            <div class="divTableCell" th:text=${unit.description}></div>
             <div class="divTableCell"></div>
         </div>
     </div>
 
-    <form class="divTableRow" style="background: #78DBE2" th:action="@{'/record/update/' + ${record.id}}" method="post">
+    <form class="divTableRow" th:action="@{'/record/update/' + ${record.id}}" method="post">
         <div class="divTableCell">&#10060;</div>
         <div class="divTableCell"><input type="text" name="mode"/></div>
         <div class="divTableCell"><input class = "decimal"
