--- a/src/main/resources/templates/unit/index.html
+++ b/src/main/resources/templates/unit/index.html
@@ -5,6 +5,9 @@
     <link rel="stylesheet" href="/css/style.css"/>
 </head>
 <body>
+<form th:action="@{/logout}" method="post">
+    <input type="submit" value="logout"/>
+</form>
 <h1>Unit definition</h1>
 <ul>
     Enter the station data (the name is sufficient), <br>
