--- a/src/main/resources/templates/unit/index.html
+++ b/src/main/resources/templates/unit/index.html
@@ -5,9 +5,17 @@
     <link rel="stylesheet" href="/css/style.css"/>
 </head>
 <body>
-<form th:action="@{/logout}" method="post">
-    <input type="submit" value="logout"/>
-</form>
+<table>
+    <tr>
+        <td>
+            <h2 th:text="'Hello, '+${username}"></h2></td>
+        <td>
+            <form th:action="@{/logout}" method="post">
+                <input type="submit" value="logout"/>
+            </form>
+        </td>
+    </tr>
+</table>
 <h1>Unit definition</h1>
 <ul>
     Enter the station data (the name is sufficient), <br>
