--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
+    <link rel="stylesheet" href="/css/register.css"/>
     <title>Registration</title>
 </head>
 <body>
-<div th:if="${param.error}">
-    Some strange errors!
+<div class="center">
+    <h1>Registration</h1>
+    <div th:if="${param.error}">
+        Some strange errors!
+    </div>
+    <form th:action="@{/register}" method="post">
+        <div class="txt_field">
+            <input type="text" name="username"/>
+            <span></span>
+            <label>Username</label>
+        </div>
+        <div class="txt_field">
+            <input type="password" name="password"/>
+            <span></span>
+            <label>Password</label>
+        </div>
+        <input type="submit" value="Sign In"/>
+        <div class="signup_link"></div>
+    </form>
 </div>
-<h1>Registration page</h1>
-<form th:action="@{/register}" method="post">
-    <div><label> username : <input type="text" name="username"/> </label></div>
-    <div><label> password: <input type="password" name="password"/> </label></div>
-    <div><input type="submit" value="Sign In"/></div>
-</form>
 </body>
 </html>
