--- a/src/main/resources/templates/auth/register.html
+++ b/src/main/resources/templates/auth/register.html
@@ -7,8 +7,8 @@
 <body>
 <div class="center">
     <h1>Registration</h1>
-    <div th:if="${param.error}">
-        Some strange errors!
+    <div class="red" th:if="${isExist}">
+        Username already exists
     </div>
     <form th:action="@{/register}" method="post">
         <div class="txt_field">
