--- a/src/main/resources/templates/auth/register.html
+++ b/src/main/resources/templates/auth/register.html
@@ -7,7 +7,7 @@
 <body>
 <div class="center">
     <h1>Registration</h1>
-    <div class="red" th:if="${isExist}">
+    <div class="red" th:if="${param.error}">
         Username already exists
     </div>
     <form th:action="@{/register}" method="post">
