--- a/src/main/resources/templates/unit/calculate.html
+++ b/src/main/resources/templates/unit/calculate.html
@@ -2,12 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
     <link rel="stylesheet" href="/css/error.css"/>
-    <title>Error</title>
+    <title>Error 404</title>
 </head>
 <body>
 <div class="center">
-    <h1>Error</h1>
-    <div class="txt_field" th:text=${request}></div>
+    <h1>The final calculation will be added soon</h1>
 </div>
 </body>
 </html>
