--- a/src/main/resources/static/css/error.css
+++ b/src/main/resources/static/css/error.css
@@ -27,7 +27,7 @@ body {
   box-sizing: border-box;
 }
 form .txt_field {
-  position: relative;
+  position: center;
   border-bottom: 2px solid #adadad;
   margin: 30px 0;
 }
