--- a/src/main/resources/templates/unit/unit-records.html
+++ b/src/main/resources/templates/unit/unit-records.html
@@ -99,7 +99,9 @@
             <div class="divTableCell"><input type="submit" value="Calculate"/></div>
         </form>
     </div>
-
+    <div th:if="${param.error}" class="red">
+        Incorrect values
+    </div>
 </div>
 </body>
 </html>
