--- a/src/main/resources/templates/unit/calculate.html
+++ b/src/main/resources/templates/unit/calculate.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
     <link rel="stylesheet" href="/css/error.css"/>
-    <title>Error 404</title>
+    <title>Soon</title>
 </head>
 <body>
 <div class="center">
