Add html-file with error 400

--- a/src/main/resources/templates/error/error-404.html
+++ b/src/main/resources/templates/error/error-404.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="center">
-    <h1>404. Page not found</h1>
+    <h1>Error 404. Page not found</h1>
 </div>
 </body>
 </html>
