--- a/src/main/resources/templates/error/error-400.html
+++ b/src/main/resources/templates/error/error-400.html
@@ -2,11 +2,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
     <link rel="stylesheet" href="/css/error.css"/>
-    <title>Error 403</title>
+    <title>Error 400</title>
 </head>
 <body>
 <div class="center">
-    <h1>Error 403. Forbidden</h1>
+    <h1>Error 400.<br>
+        Invalid request content. Please,
+        complete fields according to request
+    </h1>
 </div>
 </body>
 </html>
