--- a/src/main/resources/templates/error/error-500.html
+++ b/src/main/resources/templates/error/error-500.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="center">
-    <h1>500. Server error</h1>
+    <h1>Error 500. Server error</h1>
 </div>
 </body>
 </html>
