--- a/src/main/resources/templates/auth/sign-up.html
+++ b/src/main/resources/templates/auth/sign-up.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <link rel="stylesheet" href="/css/register.css"/>
+    <title>Registration</title>
 </head>
 <body>
-$END$
+<div class="center">
+    <h1>Registration</h1>
+    <div class="red" th:if="${param.error}">
+        Username already exists
+    </div>
+    <form th:action="@{/auth/sign-up}" method="post">
+        <div class="txt_field">
+            <input type="text" name="username"/>
+            <span></span>
+            <label>Username</label>
+        </div>
+        <div class="txt_field">
+            <input type="text" name="email"/>
+            <span></span>
+            <label>Email</label>
+        </div>
+        <div class="txt_field">
+            <input type="password" name="password"/>
+            <span></span>
+            <label>Password</label>
+        </div>
+        <input type="submit" value="Sign up"/>
+        <div class="signup_link"></div>
+    </form>
+</div>
 </body>
 </html>
