--- a/src/main/resources/templates/main/index.html
+++ b/src/main/resources/templates/main/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <link rel="stylesheet" href="/css/register.css"/>
+    <title>Let's get it started</title>
 </head>
 <body>
-$END$
+<div class="center">
+VIBRATION IS UNDER CONTROL
+</div>
 </body>
 </html>
