--- a/src/main/resources/static/css/style-old.css
+++ b/src/main/resources/static/css/style-old.css
@@ -1,49 +1,31 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
-body, html {
-  font-family: "Montserrat", sans-serif;
-  height: 100%;
-  margin: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: start;
-  font-size: 14px;
-  color: #444;
-}
-.container {
-  display: block;
-  flex-direction: column;
-  max-width: 1000px;
-  width: 100%;
-}
-.inside {
-  padding: 7px 20px;
-  display: flex;
-}
-.box {
-  height 400px;
-  border: 0px solid green;
-  top: 50%;
-  left: 50%;
-}
 h1 {
+  font-family: Tahoma, Geneva, sans-serif;
+  color: #2e6c80;
   text-align: left;
-  padding: 0px 20px;
-  font-size: 15px;
+  padding:0px 20px;
+
 }
 h2 {
+  font-family: Tahoma, Geneva, sans-serif;
+  color: #2e6c80;
   text-align: left;
   padding:0px 20px;
-  font-size: 14px;
-  color: red;
+  font-size: 16px;
 }
 ul {
+  font-family: Tahoma, Geneva, sans-serif;
+  color: #2e6c80;
   padding:0px 20px;
 }
+
 ul li {
+  font-family: Tahoma, Geneva, sans-serif;
+  color: #2e6c80;
   margin: 10px 20px;
 }
 
 div.blueTable {
+  font-family: Tahoma, Geneva, sans-serif;
   border: 1px solid #1C6EA4;
   background-color: #EEEEEE;
   width: 550px;
@@ -115,7 +97,7 @@ div.blueTable {
 
 input[type=text], input[type=number] {
   width: 100%;
-  border: 1px solid grey;
+  border: 2px solid black;
   border-radius: 4px;
   box-sizing: border-box;
   background-color: transparent;
