--- a/src/main/resources/templates/unit/unit-records.html
+++ b/src/main/resources/templates/unit/unit-records.html
@@ -1,118 +1,150 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Add records</title>
+    <title>Edit records</title>
+    <style>.hidden {display: none;}</style>
     <link rel="stylesheet" href="/css/style.css"/>
+    <link rel="stylesheet" href="/css/tables.css"/>
+    <script src="/js/toggle.js"></script>
+    <script src="/js/slider.js"></script>
 </head>
+
 <body>
-<form th:action="@{/logout}" method="post">
-    <input type="submit" value="logout"/>
-</form>
-
-<h1>How to use single plane balancing application</h1>
-<ul>Fill in the fields in the table:
-    <li>Mode is type of generator/motor load.</li>
-    <li>Magnitude and phase of vibration is a value and a phase of
-        vibration from peak to peak.
-    </li>
-    <li>Magnitude and phase of weight is a value and a phase of
-        weight installed on the shaft.
-    </li>
-    <li>The reference number is a measurement number as a
-        reference to the previous state of the machine.
-    </li>
-    <li>The state is an true/false switch. It is used to take into
-        account in the averaging of values when calculating the total load.
-    </li>
-</ul>
-<h2 th:text="'Station: ' + ${unit.station} +
-             ', Unit number: ' + ${unit.unitnumber} +
-             ', Type: ' + ${unit.type} +
-             ', Plate: ' + ${unit.plate}"></h2>
-
-<div class="divTable blueTable">
-
-    <div class="divTableHeading">
-        <div class="divTableRow">
-            <div class="divTableHead">id</div>
-            <div class="divTableHead">Mode</div>
-            <div class="divTableHead">Vibration <br> magnitude</div>
-            <div class="divTableHead">Vibration <br> phase</div>
-            <div class="divTableHead">Weight <br> magnitude</div>
-            <div class="divTableHead">Weight <br> phase</div>
-            <div class="divTableHead">Reference</div>
-            <div class="divTableHead">State</div>
-            <div class="divTableHead">Total weight<br>magnitude</div>
-            <div class="divTableHead">Total weight<br>phase</div>
-            <div class="divTableHead">Target weight<br>magnitude</div>
-            <div class="divTableHead">Target weight<br>phase</div>
-            <div class="divTableHead">Edit</div>
-            <div class="divTableHead">Delete</div>
-        </div>
+<div class="container">
+    <div class="box">
+        <table class="greeting">
+            <tr>
+                <td>
+                    <span class="inside" th:text="'Hello, '+${username}"></span>
+                </td>
+                <td>
+                    <form th:action="@{/logout}" method="post">
+                        <input type="submit" value="logout"/>
+                    </form>
+                </td>
+            </tr>
+        </table>
     </div>
 
-    <div class="divTableBody" th:each="record:${unit.records}">
-        <div class="divTableRow">
-            <div class="divTableCell" th:text=${record.id}></div>
-            <div class="divTableCell" th:text=${record.mode}></div>
-            <div class="divTableCell" th:text=${record.magvibration}></div>
-            <div class="divTableCell" th:text=${record.phasevibration}></div>
-            <div class="divTableCell" th:text=${record.magweight}></div>
-            <div class="divTableCell" th:text=${record.phaseweight}></div>
-            <div class="divTableCell" th:text=${record.reference}></div>
-            <div class="divTableCell" th:text=${record.stage}></div>
-            <div class="divTableCell" th:text=${record.magTotalWeight}></div>
-            <div class="divTableCell" th:text=${record.phaseTotalWeight}></div>
-            <div class="divTableCell" th:text=${record.magTargetWeight}></div>
-            <div class="divTableCell" th:text=${record.phaseTargetWeight}></div>
-            <div class="divTableCell">
-                <form th:action="@{'/unit/' + ${unit.id} +
-                '/record/edit/' + ${record.id}}"
-                      th:method="get">
-                    <input type="submit" value="edit"/>
+    <div class="box">
+        <a href="#" onclick="toggleElement()">
+            <span class="inside">To utilize the single plane balancing
+                application, follow these steps</span>
+        </a>
+        <ul id="listToToggle" class="hidden">
+            Fill in the fields within the table as follows:
+            <li><b>Mode</b>: Specify the type of generator/motor load.</li>
+            <li><b>Magnitude and Phase of Vibration</b>: Enter the amplitude
+                and phase of vibration, measured from peak to peak.
+            </li>
+            <li><b>Magnitude and Phase of Weight</b>: Provide the magnitude
+                and phase of the weight installed on the shaft
+            </li>
+            <li><b>Reference Number</b>: Assign a measurement number for reference
+                to the machine's previous state.
+            </li>
+            <li><b>State</b>: Utilize a true/false switch. This is employed to determine
+                whether to include the data in the averaging process when calculating
+                the total load.
+            </li>
+        </ul>
+        <span class="inside">
+            <b>&nbsp;Station name</b>
+            <span th:text="': '+${unit.station}+';&nbsp;'"></span>
+            <b>&nbsp;Unit number</b>
+            <span th:text="': '+${unit.unitnumber}+';&nbsp;'"></span>
+            <b>&nbsp;Type</b>
+            <span th:text="': '+${unit.type}+';&nbsp;'"></span>
+            <b>&nbsp;Plate number</b>
+            <span th:text="': '+${unit.plate}"></span>
+        </span>
+
+    </div>
+
+    <div class="box">
+        <table class="bordered" th:switch="${units}">
+            <!--            <h2 th:case="null">No records yet.</h2>-->
+            <thead>
+            <tr>
+                <th colspan="8" style="text-align: center">
+                    Real values
+                </th>
+                <th colspan="6" style="text-align: center">
+                    Calculated values
+                </th>
+            </tr>
+            </thead>
+
+            <tr>
+                <th rowspan="2">No</th>
+                <th rowspan="2" style="width: 70px">Mode</th>
+                <th colspan="2" style="text-align: center">Vibration</th>
+                <th colspan="2" style="text-align: center">Weight</th>
+                <th rowspan="2" style="width: 50px">Ref</th>
+                <th rowspan="2">State</th>
+                <th colspan="2" style="text-align: center">Total weight</th>
+                <th colspan="2" style="text-align: center">Target weight</th>
+                <th rowspan="2" colspan="2">Control</th>
+            </tr>
+            <tr>
+                <th style="width: 70px">mag</th>
+                <th style="width: 70px">phase</th>
+                <th style="width: 70px">mag</th>
+                <th style="width: 70px">phase</th>
+                <th style="width: 70px">mag</th>
+                <th style="width: 70px">phase</th>
+                <th style="width: 70px">mag</th>
+                <th style="width: 70px">phase</th>
+            </tr>
+
+            <tr th:each="record:${unit.records}">
+                <td th:text=${record.id}></td>
+                <td th:text=${record.mode}></td>
+                <td th:text=${record.magvibration}></td>
+                <td th:text=${record.phasevibration}></td>
+                <td th:text=${record.magweight}></td>
+                <td th:text=${record.phaseweight}></td>
+                <td th:text=${record.reference}></td>
+                <td th:text=${record.stage}></td>
+                <td th:text=${record.magTotalWeight}></td>
+                <td th:text=${record.phaseTotalWeight}></td>
+                <td th:text=${record.magTargetWeight}></td>
+                <td th:text=${record.phaseTargetWeight}></td>
+                <td>
+                    <form th:action="@{'/unit/'+${unit.id}+
+                    '/record/edit/'+${record.id}}" th:method="get">
+                        <input type="submit" value="edit"/>
+                    </form>
+                </td>
+                <td>
+                    <form th:action="@{'/unit/' + ${unit.id} +
+                '/record/delete/' + ${record.id}}" th:method="post">
+                        <input type="submit" value="delete"/>
+                    </form>
+                </td>
+            </tr>
+
+            <tr>
+                <form th:action="@{'/unit/' + ${unit.id} + '/record/create'}"
+                      method="post">
+                    <td>&#10060;</td>
+                    <td><input type="text" name="mode"/></td>
+                    <td><input type="number" name="magvibration"/></td>
+                    <td><input type="number" name="phasevibration"/></td>
+                    <td><input type="number" name="magweight"/></td>
+                    <td><input type="number" name="phaseweight"/></td>
+                    <td><input type="number" name="reference"/></td>
+                    <td><input type="checkbox" name="stage"/></td>
+                    <td colspan="6" style="text-align: left">
+                        <input type="submit" value="Add record"/>
+                    </td>
                 </form>
-            </div>
-            <div class="divTableCell">
-                <form th:action="@{'/unit/' + ${unit.id} +
-                '/record/delete/' + ${record.id}}"
-                      th:method="post">
-                    <input type="submit" value="delete"/>
-                </form>
-            </div>
-        </div>
-    </div>
-    <div class="divTableBody">
-        <form class="divTableRow"
-              th:action="@{'/unit/' + ${unit.id} + '/record/create'}"
-              method="post">
-            <div class="divTableCell">&#10060;</div>
-            <div class="divTableCell"><input type="text" name="mode"/></div>
-            <div class="divTableCell"><input type="number" name="magvibration"/></div>
-            <div class="divTableCell"><input type="number" name="phasevibration"/></div>
-            <div class="divTableCell"><input type="number" name="magweight"/></div>
-            <div class="divTableCell"><input type="number" name="phaseweight"/></div>
-            <div class="divTableCell"><input type="number" name="reference"/></div>
-            <div class="divTableCell"><input type="checkbox" name="stage"/></div>
-            <div class="divTableCell"><input type="submit" value="Add record"/></div>
-        </form>
-    </div>
-    <div class="divTableBody">
-        <form class="divTableRow"
-              th:action="@{'/unit/' + ${unit.id} + '/calculate'}"
-              method="get">
-            <div class="divTableCell"></div>
-            <div class="divTableCell"></div>
-            <div class="divTableCell"></div>
-            <div class="divTableCell"></div>
-            <div class="divTableCell"></div>
-            <div class="divTableCell"></div>
-            <div class="divTableCell"></div>
-            <div class="divTableCell"></div>
-            <!--        <div class="divTableCell"><input type="submit" value="Calculate"/></div>-->
-        </form>
-    </div>
-    <div th:if="${param.error}" class="red">
-        Incorrect values
+            </tr>
+
+<!--            <tr th:if="${param.error}" class="red">-->
+<!--                <h2>Incorrect values</h2>-->
+<!--            </tr>-->
+        </table>
     </div>
 </div>
 </body>
