--- a/src/main/resources/templates/unit/index.html
+++ b/src/main/resources/templates/unit/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Unit definition</title>
+    <title>Unit list</title>
     <link rel="stylesheet" href="/css/style.css"/>
     <link rel="stylesheet" href="/css/tables.css"/>
+    <style>.edit-row {display: none;}</style>
+    <script src="/js/editrecordrow.js"></script>
 </head>
 <body>
 <div class="container">
@@ -11,7 +13,7 @@
         <table class="greeting">
             <tr>
                 <td>
-                    <h1 th:text="'Hello, '+${username}">hh, </h1>
+                    <span class="inside" th:text="'Hello, '+${username}"></span>
                 </td>
                 <td>
                     <form th:action="@{/logout}" method="post">
@@ -23,7 +25,7 @@
     </div>
 
     <div class="box">
-        <h1>Unit definition</h1>
+        <h1>Unit list</h1>
         <ul>
             Please provide station data. If you're short on time, just the name
             will do. However, for a more comprehensive entry, include details
@@ -42,25 +44,20 @@
                 <th>Station<br>name</th>
                 <th style="width:20px">Unit<br>number</th>
                 <th>Type</th>
-                <th style="width:20px">Plate<br>number</th>
                 <th>Additional<br>information</th>
-                <th>Edit</th>
-                <th>Delete</th>
-                <th>Edit records</th>
+                <th colspan="3">Control</th>
             </tr>
             </thead>
 
-            <tr th:each="unit:${units}">
+            <tbody th:each="unit:${units}">
+            <tr>
                 <td th:text=${unit.id}></td>
                 <td th:text=${unit.station}></td>
                 <td th:text=${unit.unitnumber}></td>
                 <td th:text=${unit.type}></td>
-                <td th:text=${unit.plate}></td>
                 <td th:text=${unit.description}></td>
                 <td>
-                    <form th:action="@{'/unit/edit/'+${unit.id}}" th:method="get">
-                        <input type="submit" value="Edit"/>
-                    </form>
+                    <button onclick="showEditRow(this); return false;">Edit</button>
                 </td>
                 <td>
                     <form th:action="@{'/unit/delete/'+${unit.id}}" th:method="post">
@@ -74,21 +71,46 @@
                 </td>
             </tr>
 
+            <tr class="edit-row">
+                <form th:action="@{'/unit/update/'+${unit.id}}" method="post">
+                    <td>&#10060;</td>
+                    <td><input type="text" name="station"
+                               th:value="${unit.station}"/></td>
+                    <td><input type="number" name="unitnumber"
+                               th:value="${unit.unitnumber}"/></td>
+                    <td><input type="text" name="type"
+                               th:value="${unit.type}"/></td>
+                    <td><input type="text" name="description"
+                               th:value="${unit.description}"/></td>
+                    <td>
+                        <button type="submit">Save</button>
+                    </td>
+                    <td>
+                        <button onclick="cancelEdit(this); return false;">
+                            Cancel
+                        </button>
+                    </td>
+                </form>
+            </tr>
+            </tbody>
+
             <tr>
                 <form style="background: #78DBE2" action="/unit/create" method="post">
                     <td>&#10060;</td>
                     <td><input type="text" name="station"/></td>
                     <td><input type="number" name="unitnumber"/></td>
                     <td><input type="text" name="type"/></td>
-                    <td><input type="number" name="plate"/></td>
                     <td><input type="text" name="description"/></td>
-                    <td colspan="3"><input type="submit" value="Add unit"/></td>
+                    <td colspan="3" style="text-align:left">
+                        <input type="submit" value="Add unit"/>
+                    </td>
                 </form>
             </tr>
 
             <tr th:if="${param.error}" class="red">
                 <h2>Incorrect values</h2>
             </tr>
+
         </table>
     </div>
 </div>
